[package]
name = "babylon-example"
version = "0.1.0"
authors = ["Konrad Staniec <KonradStaniec@users.noreply.github.com>"]
edition = "2021"
description = "Smart contract to test Babylon custom cosmowasm api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.1", features = ["iterator"] }
cosmwasm-storage = { version = "1.2.1", features = ["iterator"] }
schemars = "0.8.3"
babylon-bindings = { version = "0.1.0", path = "../../packages/bindings" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
