[package]
name = "babylon-example"
version = "0.1.0"
authors = ["Konrad Staniec <KonradStaniec@users.noreply.github.com>"]
edition = "2021"
description = "Smart contract to test Babylon custom cosmowasm api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib

[dependencies]
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"

cosmwasm-schema = "2.1.4"
cosmwasm-std = { version = "2.1.4", features = ["iterator"] }
cw-storage-plus   = "2.0.0"

babylon-bindings = { version = "0.1.0", path = "../../packages/bindings" }
